Fix Java9 Warnings
* Get rid of new deprecation warnings
  in Java9.